--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
         </div>
     </div>
 
-    
+    <footer>
+        Copyright &copy; 2023, Brize Glace Open Source <br>
+        <a href="cgu.html">Conditions Générales d'Utilisations</a> <a href="cgv.html">Conditions Générales de ventes</a>
+    </footer>
+
     <script src="src/app.js"></script>
 </body>
 
